--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,15 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <parallel>none</parallel>
+        </configuration>
+      </plugin>
+      <!-- Other plugins -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
@@ -40,7 +49,7 @@
         </executions>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>src/main/resources/testsuites/CrossBrowserTest.xml</suiteXmlFile>
+            <suiteXmlFile>src/main/resources/testsuites/RegressionTest.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
