--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
       <version>4.6.0</version>
     </dependency>
     <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-devtools-v85</artifactId>
+      <version>4.21.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.10</version>
