--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,8 @@ jobs:
         run: mvn compile test
 
   update_dependency_graph:
+    runs-on: ubuntu-latest
+    needs: [test_windows, test_macos]
     steps:
       - name: Upload Dependency Graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
