--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,9 +33,23 @@ jobs:
       - name: Build and Test on macOS
         run: mvn compile test
 
+  test_ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on Ubuntu
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build and Test on Ubuntu
+        run: mvn compile test
+
   update_dependency_graph:
     runs-on: ubuntu-latest
-    needs: [test_windows, test_macos]
+    needs: [test_windows, test_macos, test_ubuntu]
     steps:
+      - uses: actions/checkout@v4
       - name: Upload Dependency Graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
