--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Framework_OOPS</name>
+  <name>Selenium_Oops</name>
   <url>https://maven.apache.org</url>
 
   <properties>
