--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test on Windows
-        run: mvn -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml compile test
+        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
   test_macos:
     runs-on: macos-latest
@@ -31,7 +31,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test on macOS
-        run: mvn -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml compile test
+        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
   test_ubuntu:
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test on Ubuntu
-        run: mvn -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml compile test
+        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
   update_dependency_graph:
     runs-on: ubuntu-latest
