--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Selenium Practice
+name: Java CI with Maven
 
 on:
   push:
@@ -18,7 +18,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test on Windows
-        run: mvn compile test "-Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml"
+        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/RegressionTest.xml
+      - name: Generate Report on Windows
+        run: mvn surefire-report:report
 
   test_macos:
     runs-on: macos-latest
@@ -31,7 +33,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test on macOS
-        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/RegressionTest.xml
+      - name: Generate Report on macOS
+        run: mvn surefire-report:report
 
   test_ubuntu:
     runs-on: ubuntu-latest
@@ -44,12 +48,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test on Ubuntu
-        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
-
-  update_dependency_graph:
-    runs-on: ubuntu-latest
-    needs: [test_windows, test_macos, test_ubuntu]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Upload Dependency Graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/RegressionTest.xml
+      - name: Generate Report on Ubuntu
+        run: mvn surefire-report:report
