--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test_windows:
+  test_windows_chrome:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,11 +17,42 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
-          node-version: '20'
-      - name: Build and Test on Windows
-        run: mvn compile test "-Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml"
+      - name: Install ChromeDriver
+        run: choco install -y chromedriver
+      - name: Build and Test on Windows with Chrome
+        run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
-  test_macos:
+  test_windows_firefox:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on Windows
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install GeckoDriver
+        run: choco install -y geckodriver
+      - name: Build and Test on Windows with Firefox
+        run: mvn compile test -Dbrowser=firefox -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+  test_windows_edge:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on Windows
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install EdgeDriver
+        run: choco install -y msedgedriver
+      - name: Build and Test on Windows with Edge
+        run: mvn compile test -Dbrowser=edge -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+  test_macos_chrome:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -31,11 +62,42 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
-          node-version: '20'
-      - name: Build and Test on macOS
-        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+      - name: Install ChromeDriver
+        run: brew install chromedriver
+      - name: Build and Test on macOS with Chrome
+        run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
-  test_ubuntu:
+  test_macos_firefox:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on macOS
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install GeckoDriver
+        run: brew install geckodriver
+      - name: Build and Test on macOS with Firefox
+        run: mvn compile test -Dbrowser=firefox -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+  test_macos_edge:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on macOS
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install EdgeDriver
+        run: brew install --cask microsoft-edge
+      - name: Build and Test on macOS with Edge
+        run: mvn compile test -Dbrowser=edge -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+  test_ubuntu_chrome:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -45,6 +107,48 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
-          node-version: '20'
-      - name: Build and Test on Ubuntu
-        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+      - name: Install ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-chromedriver
+          sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
+      - name: Build and Test on Ubuntu with Chrome
+        run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+  test_ubuntu_firefox:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on Ubuntu
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install GeckoDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y firefox-geckodriver
+      - name: Build and Test on Ubuntu with Firefox
+        run: mvn compile test -Dbrowser=firefox -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+  test_ubuntu_edge:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 20 on Ubuntu
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install EdgeDriver
+        run: |
+          curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+          sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/
+          sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge.list'
+          sudo apt update
+          sudo apt install -y microsoft-edge-stable
+          sudo apt install -y msedgedriver
+      - name: Build and Test on Ubuntu with Edge
+        run: mvn compile test -Dbrowser=edge -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
